--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.2",
-    "sass": "^1.62.0",
-    "styled-components": "^5.3.9"
+    "sass": "^1.62.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
